UI changes done for login

--- a/src/Components/Styles.css
+++ b/src/Components/Styles.css
@@ -743,7 +743,8 @@ min-height: 50px;
     padding: 8px;
     left: 0;
     bottom: 0;
-    margin-top: 51vh;
+    /*margin-top: 51vh;*/
+    display: none;
 }
 /*data area*/
 a#backButtonIndex {
@@ -764,10 +765,10 @@ a#backButtonIndex {
 	margin: 15px;
 	background-color:  #e7eaec;
 }
-.row{
+/* .row{
 	margin-right: 0px !important;
 	margin-left: 0px !important;
-}
+} */
 .MuiFormControlLabel-root {
     cursor: pointer;
     display: inline-flex !important;
@@ -875,9 +876,6 @@ button#create:hover {
     padding-left: 0px !important;
     padding-right: 0px !important;
 }
-.btn {
-    margin: 0px 5px 0px 0px;
-}
 #existing:hover{
     background-color: #1ab394;
     color: #fff;
@@ -894,3 +892,166 @@ button.searchbtn:hover {
     background-color: #1ab394;
     color: #fff;
 }
+/*Login page css started*/
+.login-block {
+	/*background: #DE6262;*/
+	/* fallback for old browsers */
+	/*background: -webkit-linear-gradient(to bottom, #FFB88C, #DE6262);*/
+	/* Chrome 10-25, Safari 5.1-6 */
+	/*background: linear-gradient(to bottom, #FFB88C, #DE6262);*/
+	/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	float: left;
+	width: 100%;
+	padding: 60px 0;
+}
+.register-block {
+	/*background: #DE6262;*/
+	/* fallback for old browsers */
+	/*background: -webkit-linear-gradient(to bottom, #FFB88C, #DE6262);*/
+	/* Chrome 10-25, Safari 5.1-6 */
+	/*background: linear-gradient(to bottom, #FFB88C, #DE6262);*/
+	/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	float: left;
+	width: 100%;
+	padding: 30px 0;
+}
+
+.banner-sec {
+	background: url(../Images/school-4527713_1920.jpg) no-repeat left bottom;
+	background-size: cover;
+	/*min-height: 500px;*/
+	border-radius: 0 10px 10px 0;
+	padding: 0;
+}
+.banner-sec2 {
+	background: url(../Images/school-4527713_1920.jpg) no-repeat left bottom;
+	background-size: cover;
+	/*min-height: 500px;*/
+	border-radius: 0 10px 10px 0;
+	padding: 0;
+}
+
+.container {
+	background: #fff;
+	border-radius: 10px;
+	box-shadow: 15px 20px 0px rgba(0, 0, 0, 0.1);
+}
+
+.carousel-inner {
+	border-radius: 0 10px 10px 0;
+}
+
+.carousel-caption {
+	text-align: left;
+	left: 5%;
+}
+
+.login-sec {
+	padding: 50px 30px;
+	position: relative;
+}
+.register-sec {
+	padding: 20px 30px;
+	position: relative;
+}
+
+.login-sec .copy-text {
+	position: absolute;
+	width: 80%;
+	bottom: 20px;
+	font-size: 13px;
+	text-align: center;
+}
+
+.login-sec .copy-text i {
+	color: #FEB58A;
+}
+
+.login-sec .copy-text a {
+	color: #E36262;
+}
+
+.login-sec h2 {
+	margin-bottom: 20px;
+	font-weight: 700;
+	font-size: 30px;
+	color: #f7944b;
+}
+.register-sec h2 {
+	margin-bottom: 20px;
+	font-weight: 700;
+	font-size: 30px;
+	color: #f7944b;
+}
+.btn-check:focus+.btn, .btn:focus {
+    outline: none;
+    box-shadow: none;
+}
+.login-form .form-group {
+    margin-bottom: 15px;
+}
+.login-sec h2:after {
+	content: " ";
+	width: 100px;
+	height: 5px;
+	background: #f7944b;
+	display: block;
+	margin-top: 20px;
+	border-radius: 3px;
+	margin-left: auto;
+	margin-right: auto
+}
+.register-sec h2:after {
+	content: " ";
+	width: 100px;
+	height: 5px;
+	background: #f7944b;
+	display: block;
+	margin-top: 20px;
+	border-radius: 3px;
+	margin-left: auto;
+	margin-right: auto
+}
+.btn-login {
+	background: #00afd8;
+    color: #fff;
+    font-weight: 600;
+    margin: 20px 0px;
+    width: 100%;
+}
+.btn-register {
+	background: #00afd8;
+    color: #fff;
+    font-weight: 600;
+    margin: 15px 0px 5px;
+    width: 100%;
+}
+.banner-text {
+	width: 70%;
+	position: absolute;
+	bottom: 40px;
+	padding-left: 20px;
+}
+
+.banner-text h2 {
+	color: #fff;
+	font-weight: 600;
+}
+
+.banner-text h2:after {
+	content: " ";
+	width: 100px;
+	height: 5px;
+	background: #FFF;
+	display: block;
+	margin-top: 20px;
+	border-radius: 3px;
+}
+
+.banner-text p {
+	color: #fff;
+}
+.LoginAccountExists {
+    text-align: center;
+}
+/*Login page css End*/
